Menambahkan gambar 2 dimensi

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     <!--MY CSS RIKARUDUS-->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <!--AKHIR CSS-->
     <!--
 <style>
@@ -57,7 +57,7 @@
    type="text/css"
  />
  <!-- Core theme CSS (includes Bootstrap)-->
- <link href="css/styles.css" rel="stylesheet" />
+ <link href="css/style.css" rel="stylesheet" />
  <link
    rel="stylesheet"
    href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -128,6 +128,7 @@
  <!-- =======================================================-->
 
  <link rel="stylesheet" href="style_02.css" />
+ <link rel="stylesheet" href="style.css" />
 
  <!--akhir dari cadangan boostrap-->
 
@@ -135,7 +136,7 @@
   </head>
   <body id="home">
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fluid-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
         
       <!--navbar-dark tulisan jadi putih sedangkan bg-primary membuat navbar jadi biru-->
       <div class="container">
@@ -179,8 +180,9 @@
     </nav>
     <br>
     <br>
-    <div class="jumbotron jumbotron-expand-lg jumbotron-dark bg-primary shadow-sm jumbotron-fluid">
-      <div class="container container-fluid">
+
+    <div class="jumbotron jumbotron-fluid ">
+      <div class="container">
         <h1 class="display-4">
           Welcome<span> To My Portfolio</span> <br /> Hope Your Days 
           <span>Remain Good.</span> God Bless You🙌
