Menmabhakan fitur Blogg

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </head>
   <body id="home">
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fluid-top">
         
       <!--navbar-dark tulisan jadi putih sedangkan bg-primary membuat navbar jadi biru-->
       <div class="container">
